--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@ Task 4/images/
 Task 4/labels/
 Task 4/test/
 Task 4/train/
+Task 5/char_lstm_interrupted.pth
+Task 5/manipal_atmospherics_df.csv
+Task 5/office_script_clean.txt
